# kinetic-os

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  demo_notepad.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cognition/: __init__.py  belief_updater.py  critic.py  thinker.py  uncertainty.py  verifier.py
config/: default.yaml  models.yaml  permissions.yaml  tools.yaml
core/: __init__.py  control_loop.py  event_bus.py  orchestrator.py  policy_runtime.py  state_manager.py  system_inspector.py
docs/: ARCHITECTURE.md  MEMORY_DESIGN.md  SECURITY.md
executor/: __init__.py  action_router.py  command_executor.py  rollback_manager.py  safe_runner.py
governance/: __init__.py  action_sandbox.py  audit_logger.py  budget_guard.py  permission_engine.py  risk_scoring.py
llm/: __init__.py  base_llm.py  llm_factory.py
llm/local/: __init__.py  ollama_provider.py
llm/prompt_engine/: __init__.py  memory_injection.py  system_prompts.py
llm/providers/: gemini_provider.py  groq_provider.py  mock_provider.py  (+1 more)
memory/: README.md  __init__.py  memory_manager.py  privacy.py  provenance.py  retrieval.py  schemas.py  scoring.py
os_controller/: __init__.py  base_controller.py  input_controller.py  linux_controller.py  screen_capture.py  screen_reader.py  ui_tree_parser.py  window_manager.py  windows_controller.py
planner/: dependency_graph.py  execution_plan.py  task_decomposer.py
scripts/: security_scan.py
tests/: test_consolidation.py  test_governance.py  test_memory_crud.py  test_os_automation.py  test_os_automation_logic.py  test_retrieval.py  test_rollback_manager.py
tools/: __init__.py  base_tool.py  tool_registry.py
ui/: __init__.py
vision/: base_vision.py  screen_capture.py  vision_router.py
world_model/: app_state_registry.py  desktop_state.py  evidence_index.py  world_state.py
(+45 files in other folders)
